# smb-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md  docker-compose.yml  patch_sspi_until_fixed.md
.github/workflows/: build.yml  rust.yml
crates/smb/: Cargo.toml
smb/: Cargo.toml  README.md
smb-cli/: Cargo.toml  README.md  cargo.toml
smb-cli/src/: cli.rs  copy.rs  info.rs  lib.rs  main.rs  path.rs
smb-lib/: Cargo.toml  README.md
smb-lib/src/: authenticator.rs  client.rs  compression.rs  connection.rs  lib.rs  msg_handler.rs  packets.rs  resource.rs  session.rs
smb-lib/src/connection/: connection.rs  negotiation_state.rs  preauth_hash.rs
smb-lib/src/crypto/: encryption.rs  signing.rs
smb-lib/src/packets/: guid.rs  netbios.rs  smb2.rs
smb-lib/src/packets/binrw_util/: file_time.rs  pos_marker_3byte.rs  sized_wide_string.rs
smb-lib/src/packets/smb2/: cancel.rs  compressed.rs  create.rs  dir.rs  echo.rs  error.rs  file.rs  fscc.rs  info.rs  ioctl.rs  lock.rs  negotiate.rs  notify.rs  oplock.rs  plain.rs  query_dir.rs  security.rs  session_setup.rs  tree_connect.rs
smb-lib/src/packets/smb2/info/: common.rs  query.rs  set.rs
smb-lib/src/resource/: directory.rs  file.rs
smb-lib/src/session/: encryptor_decryptor.rs
smb/src/: compression.rs  connection.rs  crypto.rs  dialects.rs  error.rs  lib.rs  msg_handler.rs  packets.rs  resource.rs  session.rs  sync_helpers.rs  tree.rs
smb/src/client/: config.rs  smb_client.rs  unc_path.rs
smb/src/connection/: README.md  backend.rs  config.rs  connection.rs  connection_info.rs  negotiation_state.rs  netbios_client.rs  notification_handler.rs  preauth_hash.rs  transformer.rs  transport.rs  worker.rs
smb/src/connection/backend/: async_backend.rs  threaded_backend.rs
smb/src/connection/transport/: netbios.rs  quic.rs  tcp.rs  traits.rs  utils.rs
smb/src/connection/worker/: multi_worker.rs  single_worker.rs  worker_trait.rs
smb/src/connection/worker/multi_worker/: async_backend.rs  backend_trait.rs  base.rs  threading_backend.rs
smb/src/connection/worker/parallel/: async_backend.rs  backend_trait.rs  base.rs  threading_backend.rs
smb/src/crypto/: encryption.rs  kbkdf.rs  signing.rs
smb/src/packets/: binrw_util.rs  dcerpc.rs  dfsc.rs  fscc.rs  guid.rs  netbios.rs  rpc.rs  security.rs  smb1.rs  smb2.rs  transport.rs  util.rs
smb/src/packets/binrw_util/: debug.rs  file_time.rs  helpers.rs  pos_marker.rs  pos_marker_3byte.rs  sized_wide_string.rs
smb/src/packets/dcerpc/: ndr64.rs  srvsvc.rs
smb/src/packets/dcerpc/ndr64/: align.rs  arrays.rs  ptr.rs  string.rs
smb/src/packets/fscc/: chained_item.rs  common_info.rs  directory_info.rs  filesystem_info.rs  query_file_info.rs  set_file_info.rs
smb/src/packets/rpc/: interface.rs  ndr64.rs  pdu.rs
smb/src/packets/rpc/interface/: base.rs  srvsvc.rs
smb/src/packets/rpc/ndr64/: align.rs  arrays.rs  consts.rs  ptr.rs  string.rs
smb/src/packets/security/: ace.rs  security_descriptor.rs  sid.rs  tests.rs
smb/src/packets/smb2/: cancel.rs  compressed.rs  create.rs  echo.rs  encrypted.rs  error.rs  file.rs  fscc.rs  header.rs  ioctl.rs  lock.rs  message.rs  negotiate.rs  notify.rs  oplock.rs  plain.rs  query_dir.rs  security.rs  session_setup.rs  test.rs  tree_connect.rs
smb/src/packets/smb2/fscc/: chained_item.rs  common_info.rs  directory_info.rs  filesystem_info.rs  query_file_info.rs  set_file_info.rs
smb/src/packets/smb2/info/: common.rs  query.rs  set.rs
smb/src/packets/smb2/ioctl/: common.rs  fsctl.rs  msg.rs
smb/src/packets/smb2/security/: ace.rs  acl.rs  tests.rs
smb/src/resource/: directory.rs  file.rs  file_util.rs  pipe.rs
smb/src/session/: authenticator.rs  encryptor_decryptor.rs  signer.rs  state.rs
smb/src/tree/: dfs_tree.rs
smb/tests/: Dockerfile  README.md  basic.rs  common.rs  dialects.rs  docker-compose.yml  integration_tests.rs  long_dir.rs  notify.rs  rpc.rs  smb_integration_tests.rs  start.sh
src/: authenticator.rs  binrw_util.rs  client.rs  compression.rs  crypto.rs  decompressor.rs  directory.rs  file.rs  lib.rs  main.rs  msg_handler.rs  netbios_client.rs  packets.rs  pos_marker.rs  pos_marker_3byte.rs  resource.rs  session.rs  smb_client.rs  smb_crypto.rs  smb_dir.rs  smb_file.rs  smb_handle.rs  smb_resource.rs  smb_session.rs  smb_tree.rs  tree.rs
src/crypto/: encryption.rs  kbkdf.rs  signing.rs
src/packets/: binrw_util.rs  netbios.rs  smb1.rs  smb2.rs
src/packets/binrw_util/: file_time.rs  guid.rs  pos_marker.rs
src/packets/smb2/: cancel.rs  compressed.rs  create.rs  dir.rs  encrypted.rs  error.rs  file.rs  file_id.rs  fscc.rs  header.rs  info.rs  ioctl.rs  message.rs  negotiate.rs  notify.rs  plain.rs  query_dir.rs  security.rs  session.rs  session_setup.rs  setup.rs  tree.rs  tree_connect.rs
src/resource/: directory.rs  file.rs
