[package]
name = "smb"
version = "0.1.0"
edition = "2021"

[dependencies]
binrw = "0.14.1"
rand = "0.8.5"
modular-bitfield = "0.11.2"
gss-api = {version = "0.1.0", features = []}
der = {version = "0.7.9", features = ["std", "alloc"]}
aes-gcm = {version = "0.10.3", features = ["std"]}
cmac = {version = "0.7.2"}
hmac = "0.12.1"
sha2 = "0.10.8"
rust-kbkdf = {version = "1.0.1"}
aes = "0.8.4"
log = "0.4.22"
env_logger = "0.11.6"
sspi = { version = "0.15.0", path = "../sspi-rs" }
time = {version = "0.3.37", features = ["macros"]}
ccm = "0.5.0"
lz4_flex = { version = "0.11", default-features = false, features = ["std"] }