[workspace]
members = [
    "smb-lib",
    "smb-cli"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
homepage = "https://github.com/AvivNaaman/smb-rs"
repository = "https://github.com/AvivNaaman/smb-rs"
authors = ["Aviv Naaman <avivnaaman04@gmail.com>"]
keywords = ["smb", "network", "file-sharing", "windows", "linux", "macos"]
categories = ["network-programming", "parsing-tools", "system-programming", "file-systems"]