[package]
name = "smb"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Encoding/Decoding
binrw = "0.14.1"
modular-bitfield = "0.11.2"
der = {version = "0.7.9", features = ["std", "alloc"]}

# Async
tokio = { version = "1.43", optional = true, features = ["full"] }

# General utils
rand = "0.8.5"
log = "0.4.22"
time = {version = "0.3.37", features = ["macros"]}

# APIs
sspi = { version = "0.15.1" }
gss-api = {version = "0.1.0", features = []}

# Crypto
hmac = "0.12.1"
sha2 = "0.10.8"
rust-kbkdf = {version = "1.0.1"}
aes = "0.8.4"
aes-gcm = {version = "0.10.3", features = ["std"], optional = true}
cmac = {version = "0.7.2", optional = true}
ccm = {version = "0.5.0", optional = true}

# Compression
lz4_flex = { version = "0.11", default-features = false, features = ["std"], optional = true }

[features]
default = ["sign", "encrypt", "compress"]

# Async
async = ["dep:tokio"]

# Compression
compress_pattern_v1 = []
compress_lz4 = ["dep:lz4_flex"]
compress = ["compress_pattern_v1", "compress_lz4"]

# Encryption
encrypt_aes128ccm = ["dep:ccm"]
encrypt_aes256ccm = ["dep:ccm"]
encrypt_aesccm = ["encrypt_aes128ccm", "encrypt_aes256ccm"]
encrypt = ["encrypt_aesccm"] 

# Signing
sign_gmac = ["dep:aes-gcm"]
sign_cmac = ["dep:cmac"]
sign = ["sign_gmac", "sign_cmac"]