[package]
name = "smb"
version = "0.7.2"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
# Encoding/Decoding
binrw = "0.14.1"
modular-bitfield = "0.11.2"

# Async
tokio = { version = "1.43", optional = true, features = ["full"] }
futures-core = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
tokio-util = { version = "0.7", optional = true }
maybe-async = "0.2"

# General utils
rand = "0.8.5"
log = "0.4.22"
time = { version = "0.3.37", features = ["macros"] }
thiserror = "2.0"
paste = "1.0"
url = "2.5.0"

# APIs
sspi = "0.15.11"

# Crypto
hmac = "0.12.1"
sha2 = "0.10.8"
rust-kbkdf = { version = "1.1.1" }
crypto-common = { version = "0.1" }
aes = "0.8.4"
aes-gcm = { version = "0.10.3", features = ["std"], optional = true }
cmac = { version = "0.7.2", optional = true }
ccm = { version = "0.5.0", optional = true }
aead = { version = "0.5", optional = true }

# Compression
lz4_flex = { version = "0.11", default-features = false, features = [
    "std",
], optional = true }

# Transport
quinn = { version = "0.11.7", optional = true }
rustls = { version = "0.23", optional = true }
rustls-platform-verifier = { version = "0.5", optional = true }

# Dev - Tests
[dev-dependencies]
test-log = "0.2"
serial_test = "3.2"
temp-env = {version = "0.3.6", features = ["async_closure"]}

[features]
default = ["sign", "encrypt", "compress", "quic", "async", "kerberos"]

# Threading models
async = ["dep:tokio", "dep:futures-core", "dep:tokio-util", "dep:futures-util"]
multi_threaded = ["maybe-async/is_sync"]
single_threaded = ["maybe-async/is_sync"]

# Compression
compress_pattern_v1 = []
compress_lz4 = ["dep:lz4_flex"]
compress = ["compress_pattern_v1", "compress_lz4"]

# Encryption
encrypt_aes128ccm = ["dep:ccm", "dep:aead"]
encrypt_aes256ccm = ["dep:ccm", "dep:aead"]
encrypt_aesccm = ["encrypt_aes128ccm", "encrypt_aes256ccm"]
encrypt_aes128gcm = ["dep:aes-gcm", "dep:aead"]
encrypt_aes256gcm = ["dep:aes-gcm", "dep:aead"]
encrypt_aesgcm = ["encrypt_aes128gcm", "encrypt_aes256gcm"]
encrypt = ["encrypt_aesccm", "encrypt_aesgcm"]

# Signing
sign_gmac = ["dep:aes-gcm"]
sign_cmac = ["dep:cmac"]
sign_hmac = []
sign = ["sign_gmac", "sign_cmac", "sign_hmac"]

# Transport
quic = ["dep:quinn", "dep:rustls", "dep:rustls-platform-verifier"]

# Kerberos
kerberos = ["sspi/network_client"]

[package.metadata.docs.rs]
features = ["async", "sign", "encrypt", "compress"]
no-default-features = true
